--- a/public/about.html
+++ b/public/about.html
@@ -44,9 +44,9 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-xxl-6">
                             <div class="text-center my-5">
-                                <h1 class="fw-bolder mb-3">Our mission is to make building websites easier for everyone.</h1>
-                                <p class="lead fw-normal text-muted mb-4">Start Bootstrap was built on the idea that quality, functional website templates and themes should be available to everyone. Use our open source, free products, or support us by purchasing one of our premium products or services.</p>
-                                <a class="btn btn-primary btn-lg" href="#scroll-target">Read our story</a>
+                                <h1 class="fw-bolder mb-3">Our Mission Statement</h1>
+                                <p class="lead fw-normal text-muted mb-4">Our goal is to increase accessibility to the outdoors, provide support to victims of abuse in the outdoor community, support the families of missing/murdered hikers, and healing with art.</p>
+                                <a class="btn btn-dark btn-lg" href="#scroll-target">Read our story</a>
                             </div>
                         </div>
                     </div>
