added copy, refactored css

--- a/public/about.html
+++ b/public/about.html
@@ -8,6 +8,8 @@
         <title>A Higher Calling</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -93,25 +95,12 @@
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
                             <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://firebasestorage.googleapis.com/v0/b/ahighercallingpnw-22f5f.appspot.com/o/Me.png?alt=media&token=cf550cf6-6a97-4496-b02d-94f2f14d1ce9" alt="..." />
                                 <h5 class="fw-bolder">Phoebe Ngo</h5>
                                 <div class="fst-italic text-muted">Webmaster</div>
                             </div>
                         </div>
-                        <div class="col mb-5 mb-5 mb-sm-0">
-                            <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">TBD</h5>
-                                <div class="fst-italic text-muted">Operations Manager</div>
-                            </div>
-                        </div>
-                        <div class="col mb-5">
-                            <div class="text-center">
-                                <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
-                                <h5 class="fw-bolder">TBD</h5>
-                                <div class="fst-italic text-muted">TBD</div>
-                            </div>
-                        </div>
+                    </div>
                     </div>
                 </div>
             </section>
@@ -122,15 +111,15 @@
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; A Higher Calling 2023</div></div>
                     <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy</a>
+                        <a class="link-light small" href="https://instagram.com/ahighercallingpnw"><i class="fab fa-instagram"></i></a>
                         <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Terms</a>
+                        <a class="link-light small" href="#!"><i class="fab fa-facebook-f"></i></a>
                         <span class="text-white mx-1">&middot;</span>
                         <a class="link-light small" href="contact.html">Contact</a>
                     </div>
                 </div>
             </div>
-        </footer>
+            </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
