aesthetic changes to about and contact pages

--- a/public/about.html
+++ b/public/about.html
@@ -58,10 +58,10 @@
             <section class="py-5 bg-light" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://firebasestorage.googleapis.com/v0/b/ahighercallingpnw-22f5f.appspot.com/o/20230102_074337.jpg?alt=media&token=98f890df-3f9d-4c96-bf38-72e37fa193e8" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Our founding</h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                            <p class="lead fw-normal text-muted mb-0">Coming soon!</p>
                         </div>
                     </div>
                 </div>
@@ -70,10 +70,10 @@
             <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://firebasestorage.googleapis.com/v0/b/ahighercallingpnw-22f5f.appspot.com/o/20230102_075824.jpg?alt=media&token=695136a4-4d55-41cc-9415-f1fabbf29cee" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder">Growth &amp; beyond</h2>
-                            <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                            <p class="lead fw-normal text-muted mb-0">Coming soon! Check out our <a href="https://instagram.com/ahighercallingpnw">Instagram</a> to get the latest updates.</p>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                             <div class="text-center">
                                 <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
                                 <h5 class="fw-bolder">Mel Fernandez</h5>
-                                <div class="fst-italic text-muted">Founder &amp; CEO</div>
+                                <div class="fst-italic text-muted">Founder</div>
                             </div>
                         </div>
                         <div class="col mb-5 mb-5 mb-xl-0">
