--- a/public/contact.html
+++ b/public/contact.html
@@ -18,7 +18,7 @@
 
     </head>
     <body class="d-flex flex-column">
-        <main class="flex-shrink-0">
+        <main class="flex-fill">
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
